--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@mui/icons-material": "^5.16.6",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.23-alpha.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
