--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
+    "react-table": "^7.8.0",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
