--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.24.1",
     "react-scroll": "^1.9.0",
     "react-table": "^7.8.0",
+    "react-transition-group": "^4.4.5",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
